--- a/admin.html
+++ b/admin.html
@@ -4,25 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang Quản Trị</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div class="sidebar">
-        <ul>
-            <div class="logo">Logo</div>
-            <li><a href="#"><i class="fas fa-tachometer-alt"></i> Tổng quan</a></li>
-            <li><a href="#"><i class="fas fa-box"></i> Quản lý sản phẩm</a></li>
-            <li><a href="#"><i class="fas fa-shopping-cart"></i> Quản lý đơn hàng</a></li>
-            <li><a href="#"><i class="fas fa-chart-line"></i> Thống kê</a></li>
-            <li><a href="#"><i class="fas fa-users"></i> Quản lý người dùng</a></li>
-            <li><a href="#"><i class="fas fa-cog"></i> Cài đặt</a></li>
-            <li><a href="#" class ="logout" ><i class="fas fa-sign-out-alt"></i> Đăng xuất</a></li>
-        </ul>
+    <div class="container">
+        <!-- Thanh trên cùng -->
+        <header class="topbar">
+            <a href="#"><i class="fa-solid fa-bars"></i></a>
+        </header>
+
+        <!-- Thanh bên trái -->
+        <aside class="sidebar">
+            <nav>
+                <ul>
+                    <li><a href="#"><i class="fas fa-tachometer-alt"></i> Tổng quan</a></li>
+                    <li><a href="#"><i class="fas fa-box"></i> Quản lý sản phẩm</a></li>
+                    <li><a href="#"><i class="fas fa-shopping-cart"></i> Quản lý đơn hàng</a></li>
+                    <li><a href="#"><i class="fas fa-chart-line"></i> Thống kê</a></li>
+                    <li><a href="#"><i class="fas fa-users"></i> Quản lý người dùng</a></li>
+                    <li><a href="#"><i class="fas fa-cog"></i> Cài đặt</a></li>
+                    <li><a href="#" class="logout"><i class="fas fa-sign-out-alt"></i> Đăng xuất</a></li>
+                </ul>
+            </nav>
+        </aside>
+
+        <!-- Phần nội dung chính -->
+        <main class="content">
+            <!-- Các thẻ tóm tắt -->
+            <section class="dashboard-cards">
+                <div class="card truycap">Truy cập</div>
+                <div class="card doanhthu">Doanh thu</div>
+                <div class="card orders">Đơn hàng</div>
+                <div class="card users">Người dùng</div>
+            </section>
+
+            <!-- Phần phân tích và biểu đồ -->
+            <section class="analytics">
+                <div class="chart bieudo">Biểu đồ</div>
+                <div class="summary tong-hop">Tổng hợp</div>
+            </section>
+
+            <!-- Các tiện ích bổ sung -->
+            <section class="extra-widgets">
+                <div class="widget e">Widget E</div>
+                <div class="widget f">Widget F</div>
+                <div class="widget g">Widget G</div>
+                <div class="widget h">Widget H</div>
+            </section>
+        </main>
+
+        <!-- Phần chân trang -->
+        <footer class="footer chantrang">
+            © 2023 Trang Quản Trị
+        </footer>
     </div>
-    <div class="main-content">
-        <h1>Dashboard</h1>
-    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
