--- a/admin2.html
+++ b/admin2.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Admin Dashboard</title>
+    <title>Admin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/d696fbacd3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/admin.css">
     <script src="data/product.js"></script>
+    <script src="data/user.js"></script>
+    <script src="js/dungchung.js"></script>
 </head>
 
 <body>
@@ -128,6 +130,18 @@
 
                 <!-- Sản Phẩm -->
                 <div class="sanpham">
+                    <div class="table-top">
+                        <select name="kieuTimSanPham">
+                            <option value="ma">Tìm theo mã</option>
+                            <option value="ten">Tìm theo tên</option>
+                        </select>
+                        <input type="text" placeholder="Tìm kiếm..." onkeyup="timKiemSanPham(this)">
+                        <button
+                            onclick="document.getElementById('khungThemSanPham').style.transform = 'scale(1)'; autoMaSanPham()">
+                            <i class="fa fa-plus-square"></i>
+                            Thêm sản phẩm
+                        </button>
+                    </div>
                     <table class="table-header">
                         <tr>
                             <!-- Theo độ rộng của table content -->
@@ -148,23 +162,105 @@
 
                     <div class="table-content table">
                     </div>
-
-                    <div class="table-footer">
-                        <select name="kieuTimSanPham">
-                            <option value="ma">Tìm theo mã</option>
-                            <option value="ten">Tìm theo tên</option>
-                        </select>
-                        <input type="text" placeholder="Tìm kiếm..." onkeyup="timKiemSanPham(this)">
-                        <button
-                            onclick="document.getElementById('khungThemSanPham').style.transform = 'scale(1)'; autoMaSanPham()">
-                            <i class="fa fa-plus-square"></i>
-                            Thêm sản phẩm
-                        </button>
+                    <div id="khungThemSanPham" class="overlay">
+                        <span class="close" onclick="this.parentElement.style.transform = 'scale(0)';">&times;</span>
+                        <table class="overlayTable table-outline table-content table-header">
+                            <tr>
+                                <th colspan="2">Thêm Sản Phẩm</th>
+                            </tr>
+                            <tr>
+                                <td>Mã sản phẩm:</td>
+                                <td><input type="text" id="maspThem"></td>
+                            </tr>
+                            <tr>
+                                <td>Tên sản phẩm:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                            <tr>
+                                <td>Loại:</td>
+                                <td>
+                                    <select name="chonLoai">
+                                        <script>
+                                            var loai = ["Cake", "Bread", "Cookie", "Sandwich and Salad"];
+                                            for(var c of loai) {
+                                                document.writeln(`<option value="`+c+`">`+c+`</option>`);
+                                            }
+                                        </script>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Hình:</td>
+                                <td>
+                                    <img class="hinhDaiDien" id="anhDaiDienSanPhamThem" src="">
+                                    <input type="file" accept="image/product/*" onchange="capNhatAnhSanPham(this.files, 'anhDaiDienSanPhamThem')">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Giá tiền:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                            <tr>
+                                <td>Mô tả:</td>
+                                <td><textarea></textarea></td>
+                            </tr>                            
+                            <tr>
+                                <td>Size</td>
+                                <td>
+                                    <select name="chonSize" onchange="changeKichCoBanhInput(this.value)">
+                                        <option value="">Không</option>
+                                        <option value="1">Phù hợp cho bữa ăn</option>
+                                        <option value="2">Phù hợp cho ăn vặt</option>
+                                        <option value="3">Tùy chỉnh</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Kích cỡ bánh:</td>
+                                <td><input type="text" placeholder=""></td>
+                            </tr>
+                            <tr>
+                                <td>Texture:</td>
+                                <td><input type="text"></td>
+                            <tr>
+                                <td>Hương vị:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                            <tr>
+                                <th colspan="2">Khuyến mãi</th>
+                            </tr>
+                            <tr>
+                                <td>Tên khuyến mãi:</td>
+                                <td><input type="text"></td>   
+                            </tr>
+                            <tr>
+                                <td>Giá trị giảm giá:</td>
+                                <td><input type="text"></td>   
+                            </tr>
+                                <td colspan="2" class="table-footer"> <button onclick="themSanPham()">THÊM</button> </td>
+                            </tr>
+                        </table>
                     </div>
+                    <div id="khungSuaSanPham" class="overlay"></div>
                 </div>
 
                 <!-- Đơn Hàng -->
                 <div class="donhang">
+                    <div class="table-top">
+                        <div class="timTheoNgay">
+                            Từ ngày: <input type="date" id="fromDate">
+                            Đến ngày: <input type="date" id="toDate">
+
+                            <button onclick="locDonHangTheoKhoangNgay()"><i class="fa fa-search"></i> Tìm</button>
+                        </div>
+
+                        <select name="kieuTimDonHang">
+                            <option value="ma">Tìm theo mã đơn</option>
+                            <option value="khachhang">Tìm theo tên khách hàng</option>
+                            <option value="trangThai">Tìm theo trạng thái</option>
+                        </select>
+                        <input type="text" placeholder="Tìm kiếm..." onkeyup="timKiemDonHang(this)">
+                    </div>
                     <table class="table-header">
                         <tr>
                             <!-- Theo độ rộng của table content -->
@@ -189,25 +285,18 @@
                     <div class="table-content">
                     </div>
 
-                    <div class="table-footer">
-                        <div class="timTheoNgay">
-                            Từ ngày: <input type="date" id="fromDate">
-                            Đến ngày: <input type="date" id="toDate">
-
-                            <button onclick="locDonHangTheoKhoangNgay()"><i class="fa fa-search"></i> Tìm</button>
-                        </div>
-
-                        <select name="kieuTimDonHang">
-                            <option value="ma">Tìm theo mã đơn</option>
-                            <option value="khachhang">Tìm theo tên khách hàng</option>
-                            <option value="trangThai">Tìm theo trạng thái</option>
-                        </select>
-                        <input type="text" placeholder="Tìm kiếm..." onkeyup="timKiemDonHang(this)">
-                    </div>
-
                 </div>
                 <!-- Khách hàng -->
                 <div class="khachhang">
+                    <div class="table-top">
+                        <select name="kieuTimKhachHang">
+                            <option value="ten">Tìm theo họ tên</option>
+                            <option value="email">Tìm theo email</option>
+                            <option value="taikhoan">Tìm theo tài khoản</option>
+                        </select>
+                        <input type="text" placeholder="Tìm kiếm..." onkeyup="timKiemNguoiDung(this)">
+                        <button onclick="openThemNguoiDung()"><i class="fa fa-plus-square"></i> Thêm người dùng</button>
+                    </div>
                     <table class="table-header">
                         <tr>
                             <!-- Theo độ rộng của table content -->
@@ -226,16 +315,6 @@
                     </table>
 
                     <div class="table-content">
-                    </div>
-
-                    <div class="table-footer">
-                        <select name="kieuTimKhachHang">
-                            <option value="ten">Tìm theo họ tên</option>
-                            <option value="email">Tìm theo email</option>
-                            <option value="taikhoan">Tìm theo tài khoản</option>
-                        </select>
-                        <input type="text" placeholder="Tìm kiếm..." onkeyup="timKiemNguoiDung(this)">
-                        <button onclick="openThemNguoiDung()"><i class="fa fa-plus-square"></i> Thêm người dùng</button>
                     </div>
                 </div>
             </main>
