--- a/admin.html
+++ b/admin.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/d696fbacd3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/admin.css">
-    <script src="data/product.js"></script>
-    <script src="data/user.js"></script>
-    <script src="js/dungchung.js"></script>
 </head>
 
 <body>
@@ -49,6 +46,12 @@
                                 class="fa-regular fa-user pe-2"></i>
                             User
                         </a>
+                    </li>
+                     <li class="sidebar-item">
+                         <a href="#" class="sidebar-link collapsed" data-bs-target="#statistical"
+                            aria-expanded="false"><i class="fa-solid fa-chart-line pe-2"></i>
+                            Statistical
+                      </a>
                     </li>
                 </ul>
             </div>
@@ -392,6 +395,51 @@
                     <div class="table-content">
                     </div>
                 </div>
+                 <!-- Thống Kê -->
+                <div class="thongke">
+  <header class="header">
+    <h3>Thống Kê Kinh Doanh</h3>
+  </header>
+  <div class="summary">
+    <h2>Tổng Doanh Thu: <span id="totalRevenue">0 VNĐ</span></h2>
+    <h3>Bán chạy nhất: <span id="bestSellingProduct">Chưa có</span></h3>
+    <h3>Bán ít nhất: <span id="worstSellingProduct">Chưa có</span></h3>
+  </div>
+  <!-- Product Table -->
+  <table id="itemDetails" class="table">
+    <thead>
+      <tr>
+        <th>Tên Mặt Hàng</th>
+        <th>Số Lượng Bán Ra</th>
+        <th>Tổng Doanh Thu</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Populated by JavaScript -->
+    </tbody>
+  </table>
+
+  <!-- Order Table -->
+  <table id="invoiceDetails" class="table">
+    <thead>
+      <tr>
+        <th>ID Đơn Hàng</th>
+        <th>Khách Hàng</th>
+        <th>Địa Chỉ</th>
+        <th>Ngày</th>
+        <th>Trạng Thái</th>
+        <th>Số tiền Thanh toán</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Populated by JavaScript -->
+    </tbody>
+  </table>
+
+  <div id="pagination">
+    <!-- Pagination buttons -->
+  </div>
+                </div>
             </main>
             <a href="#" class="theme-toggle">
                 <i class="fa-regular fa-moon"></i>
@@ -400,7 +448,13 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/admin.js"></script>
+   <script src="js/admin.js"></script>
+    <script src="data/product.js"></script>
+    <script src="data/user.js"></script>
+    <script src="js/dungchung.js"></script>
+    <script src="data/dataquanly.js"></script>
+    <script src="js/quanly.js"></script>
+    <script src="js/thongke.js"></script>
 </body>
 
 </html>
