--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,6 @@
     <script src="https://kit.fontawesome.com/d696fbacd3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/admin.css">
 </head>
-
 <body>
     <div class="wrapper">
         <aside id="sidebar" class="js-sidebar">
@@ -338,16 +337,17 @@
 
                     <!-- Bảng danh sách đơn hàng -->
                     <div class="table-content">
-                        <table id="order-table" class="table-outline">
+                        <table id="order-table" class="table-header">
                             <thead>
                                 <tr>
-                                    <th>STT</th>
-                                    <th>Mã Đơn hàng</th>
-                                    <th>Khách hàng</th>
-                                    <th>Địa chỉ</th>
-                                    <th>Ngày đặt</th>
-                                    <th>Tình trạng</th>
-                                    <th>Hành động</th>
+                                  <th title="Sắp xếp">STT<i class="fa fa-sort"></i></th>
+                                  <th title="Sắp xếp">Mã Đơn hàng<i class="fa fa-sort"></i></th>
+                                  <th title="Sắp xếp">ID Khách Hàng<i class="fa fa-sort"></i></th>
+                                  <th title="Sắp xếp">Khách hàng<i class="fa fa-sort"></i></th>
+                                  <th title="Sắp xếp">Địa chỉ<i class="fa fa-sort"></i></th>
+                                  <th title="Sắp xếp">Ngày đặt<i class="fa fa-sort"></i></th>
+                                  <th title="Sắp xếp">Tình trạng<i class="fa fa-sort"></i></th>
+                                  <th title="Sắp xếp">Hành động<i class="fa fa-sort"></i></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -363,7 +363,6 @@
                         </div>
                     </div>
                 </div>
-                
                 <!-- Khách hàng -->
                 <div class="khachhang">
                     <div class="table-top">
@@ -406,13 +405,13 @@
     <h3>Bán ít nhất: <span id="worstSellingProduct">Chưa có</span></h3>
   </div>
   <!-- Product Table -->
-  <table id="itemDetails" class="table">
+  <table id="itemDetails" class="table-header">
     <thead>
-      <tr>
-        <th>Tên Mặt Hàng</th>
-        <th>Số Lượng Bán Ra</th>
-        <th>Tổng Doanh Thu</th>
-      </tr>
+           <tr>
+                <th title="Sắp xếp">Tên Mặt Hàng<i class="fa fa-sort"></i></th>
+                <th title="Sắp xếp">Số Lượng Bán Ra<i class="fa fa-sort"></i></th>
+                <th title="Sắp xếp">Doanh Thu<i class="fa fa-sort"></i></th>
+            </tr>
     </thead>
     <tbody>
       <!-- Populated by JavaScript -->
@@ -420,16 +419,17 @@
   </table>
 
   <!-- Order Table -->
-  <table id="invoiceDetails" class="table">
+  <table id="invoiceDetails" class="table-header">
     <thead>
       <tr>
-        <th>ID Đơn Hàng</th>
-        <th>Khách Hàng</th>
-        <th>Địa Chỉ</th>
-        <th>Ngày</th>
-        <th>Trạng Thái</th>
-        <th>Số tiền Thanh toán</th>
-      </tr>
+                <th title="Sắp xếp">ID Đơn Hàng <i class="fa fa-sort"></i></th>
+                <th title="Sắp xếp">Khách Hàng <i class="fa fa-sort"></i></th>
+                <th title="Sắp xếp">Địa Chỉ<i class="fa fa-sort"></i></th>
+                <th title="Sắp xếp">Ngày<i class="fa fa-sort"></i></th>
+                <th title="Sắp xếp">Trạng Thái<i class="fa fa-sort"></i></th>
+                <th title="Sắp xếp">Số tiền Thanh toán<i class="fa fa-sort"></i></th>
+            </tr>
+
     </thead>
     <tbody>
       <!-- Populated by JavaScript -->
@@ -448,7 +448,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="data/product.js"></script>
+    <script src="data/product.js"></script>
     <script src="data/user.js"></script>
     <script src="js/dungchung.js"></script>
     <script src="data/dataquanly.js"></script>
