--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="product.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -164,7 +164,7 @@
     </footer>
 </body>
 <script src="product.js"></script>
-<script src="scrip.js"></script>
+<script src="index.js"></script>
 <script src="tabproduct.js"></script>
 <script src="data/dataproduct.js"></script>
 </html> 
