--- a/admin.html
+++ b/admin.html
@@ -69,7 +69,7 @@
                             <div class="dropdown-menu dropdown-menu-end">
                                 <a href="#" class="dropdown-item">Profile</a>
                                 <a href="#" class="dropdown-item">Setting</a>
-                                <a href="#" class="dropdown-item">Logout</a>
+                                <a href="product.html" class="dropdown-item">Logout</a>
                             </div>
                         </li>
                     </ul>
@@ -381,9 +381,11 @@
                                     class="fa fa-sort"></i></th>
                             <th title="Sắp xếp" style="width: 15%" onclick="sortKhachHangTable('hoten')">Họ tên <i
                                     class="fa fa-sort"></i></th>
-                            <th title="Sắp xếp" style="width: 20%" onclick="sortKhachHangTable('email')">Email <i
+                            <th title="Sắp xếp" style="width: 15%" onclick="sortKhachHangTable('email')">Email <i
                                     class="fa fa-sort"></i></th>
-                            <th title="Sắp xếp" style="width: 20%" onclick="sortKhachHangTable('taikhoan')">Tài khoản <i
+                            <th title="Sắp xếp" style="width: 15%" onclick="sortKhachHangTable('sdt')">Số điện thoại <i
+                                    class="fa fa-sort"></i></th>
+                            <th title="Sắp xếp" style="width: 10%" onclick="sortKhachHangTable('taikhoan')">Tài khoản <i
                                     class="fa fa-sort"></i></th>
                             <th title="Sắp xếp" style="width: 10%" onclick="sortKhachHangTable('matkhau')">Mật khẩu <i
                                     class="fa fa-sort"></i></th>
