add login register

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div> 
-                <div class="enter">
+                <div class="enter_member">
                     <p>Tài khoản</p>
                 </div>
                 <i class="material-icons icon red">local_mall</i>
