--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Online Store</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/taikhoan.css">
+    <link rel="stylesheet" href="css/product.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="js/dungchung.js"></script>
     <script src="js/classes.js"></script>
