--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
 <script src="data/dataproduct.js"></script>
 <script src="data/user.js"></script>
 <script src="js/timkiem.js"></script>
+<script src="js/filter.js"></script>
 
 
 
